# matsim-nyc-clean

./: .gitattributes  .gitignore  README.md  pom.xml
analysis/: convergence_charts.py  link_volumes.py  pyproject.toml  sample_population.py
docs/: README.md  architecture.md  data-inputs.md  local-toolchain.md  simulation-model.md  tutorial.md
input/: config-3893-100iter.xml  config-with-mode-vehicles.xml  subset_population_100.xml  subset_population_3893.xml
scripts/: run_3893.sh
